header-footer  BEM методология

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <!-- HEADER -->
     <header class="header">
       <div class="container">
-        <nav class="nav-list">
-          <a class="header-logo" href="./index.html"
-            ><span class="web-logo">Web</span>Studio</a
+        <nav class="navigation">
+          <a class="logotype" href="./index.html"
+            ><span class="accent-logo">Web</span>Studio</a
           >
-          <ul class="nav-list-pages">
-            <li class="nav-item-current"><a href="./index.html">Студия</a></li>
-            <li class="nav-item"><a href="./portfolio.html">Портфолио</a></li>
-            <li class="nav-item"><a href="">Контакты</a></li>
+          <ul class="nav-list">
+            <li class="nav-list__item--current"><a href="./index.html">Студия</a></li>
+            <li class="nav-list__item"><a href="./portfolio.html">Портфолио</a></li>
+            <li class="nav-list__item"><a href="">Контакты</a></li>
           </ul>
         </nav>
         <ul class="contact-list">
@@ -458,8 +458,8 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-content">
-          <a class="footer-logo" href="./index.html"
-            ><span class="web-logo">Web</span>Studio</a
+          <a class="logotype" href="./index.html"
+            ><span class="accent-logo">Web</span>Studio</a
           >
           <address class="footer-address">
             <p>г. Киев, пр-т Леси Украинки, 26</p>
