BEM in progress

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,14 +23,14 @@
           >
           <ul class="nav-list">
             <li class="nav-list__item"><a href="./index.html">Студия</a></li>
-            <li class="nav-list__item--current">
+            <li class="nav-list__item nav-list__item--current">
               <a href="./portfolio.html">Портфолио</a>
             </li>
             <li class="nav-list__item"><a href="">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="contact-list">
-          <li class="contact-item">
+        <ul class="contacts">
+          <li class="contacts__item">
             <a href="mailto:info@devstudio.com">
               <svg class="header-icon">
                 <use href="./img/icons.svg#icon-email"></use>
@@ -38,7 +38,7 @@
               info@devstudio.com</a
             >
           </li>
-          <li class="contact-item">
+          <li class="contacts__item">
             <a href="tel:+380961111111">
               <svg class="header-icon">
                 <use href="./img/icons.svg#icon-phone"></use>
