--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
             ><span class="accent-logo">Web</span>Studio</a
           >
           <ul class="nav-list">
-            <li class="nav-list__item--current"><a href="./index.html">Студия</a></li>
+            <li class="nav-list__item nav-list__item--current"><a href="./index.html">Студия</a></li>
             <li class="nav-list__item"><a href="./portfolio.html">Портфолио</a></li>
             <li class="nav-list__item"><a href="">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="contact-list">
-          <li class="contact-item">
+        <ul class="contacts">
+          <li class="contacts__item">
             <a href="mailto:info@devstudio.com">
               <svg class="header-icon" width="16px" height="12px">
                 <use href="./img/icons.svg#icon-email"></use>
@@ -36,7 +36,7 @@
               info@devstudio.com</a
             >
           </li>
-          <li class="contact-item">
+          <li class="contacts__item">
             <a href="tel:+380961111111">
               <svg class="header-icon" width="10px" height="16px">
                 <use href="./img/icons.svg#icon-phone"></use>
