--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
     <main>
       <!--Section HERO-->
       <section class="hero-section">
-        <h1 class="hero-title">
+        <h1 class="hero-section__title">
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <button class="order-btn" data-open-modal>Заказать услугу</button>
+        <button class="hero-section__order-btn" data-open-modal>Заказать услугу</button>
         <div class="backdrop is-hidden" data-backdrop>
           <div class="modal">
             <button class="close-button" data-close-modal>
@@ -64,7 +64,7 @@
               </svg>
             </button>
             <div class="modal-content">
-              <h3 class="form-title">
+              <h3 class="modal-content__title">
                 Оставьте свои данные, мы вам перезвоним
               </h3>
               <form class="modal-form">
