--- a/index.html
+++ b/index.html
@@ -58,20 +58,19 @@
         <button class="hero-section__order-btn" data-open-modal>Заказать услугу</button>
         <div class="backdrop is-hidden" data-backdrop>
           <div class="modal">
-            <button class="close-button" data-close-modal>
+            <button class="modal__close-button" data-close-modal>
               <svg width="11px" height="11px">
                 <use href="./img/icons.svg#icon-close"></use>
               </svg>
             </button>
-            <div class="modal-content">
               <h3 class="modal-content__title">
                 Оставьте свои данные, мы вам перезвоним
               </h3>
               <form class="modal-form">
                 <div class="form-field">
-                  <label for="name" class="form-label">Имя</label>
+                  <label for="name" class="form-field__label">Имя</label>
                   <input
-                    class="form-input"
+                    class="form-field__input"
                     type="text"
                     name="name"
                     id="name"
@@ -80,14 +79,14 @@
                     minlength="2"
                     maxlength="15"
                   />
-                  <svg class="input-icon" width="18px" height="18px">
+                  <svg class="form-field__icon" width="18px" height="18px">
                     <use href="./img/icons.svg#input-person"></use>
                   </svg>
                 </div>
                 <div class="form-field">
-                  <label for="tel" class="form-label">Телефон</label>
+                  <label for="tel" class="form-field__label">Телефон</label>
                   <input
-                    class="form-input"
+                    class="form-field__input"
                     type="text"
                     name="tel"
                     id="tel"
@@ -95,14 +94,14 @@
                     minlength="10"
                     maxlength="10"
                   />
-                  <svg class="input-icon" width="18px" height="18px">
+                  <svg class="form-field__icon" width="18px" height="18px">
                     <use href="./img/icons.svg#input-phone"></use>
                   </svg>
                 </div>
                 <div class="form-field">
-                  <label for="email" class="form-label">Почта</label>
+                  <label for="email" class="form-field__label">Почта</label>
                   <input
-                    class="form-input"
+                    class="form-field__input"
                     type="email"
                     name="email"
                     id="email"
@@ -110,20 +109,20 @@
                     minlength="2"
                     maxlength="15"
                   />
-                  <svg class="input-icon" width="18px" height="18px">
+                  <svg class="form-field__icon" width="18px" height="18px">
                     <use href="./img/icons.svg#input-mail"></use>
                   </svg>
                 </div>
                 <div class="form-field">
-                  <label for="comment" class="form-label">Комментарий</label>
+                  <label for="comment" class="form-field__label">Комментарий</label>
                   <textarea
                     placeholder="Введите текст"
-                    class="form-comment"
+                    class="form-field__comment"
                     name="comment"
                     id="comment"
                   ></textarea>
                 </div>
-                <label for="conditions" class="checkbox-label">
+                <label for="conditions" class="form-field__checkbox">
                   <span class="check-position-wrapper">
                     <input
                       class="custom-checkbox"
@@ -134,7 +133,7 @@
                       required
                     />
                     <svg
-                      class="icon-custom-checkbox"
+                      class="custom-checkbox__icon"
                       width="16px"
                       height="15px"
                     >
@@ -152,7 +151,6 @@
                   <button class="submit-btn" type="submit">Отправить</button>
                 </div>
               </form>
-            </div>
           </div>
         </div>
       </section>
