--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <!-- HEADER -->
     <header class="header">
-      <div class="container">
+      <div class="container header__container">
         <nav class="navigation">
           <a class="logotype" href="./index.html"
             ><span class="accent-logo">Web</span>Studio</a
