BEM on index.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,10 +16,10 @@
   <body>
     <!-- Header -->
     <header class="header">
-      <div class="container">
-        <nav class="navigation">
+      <div class="container header__container">
+        <nav class="nav">
           <a class="logotype" href="./index.html"
-            ><span class="accent-logo">Web</span>Studio</a
+            ><span class="logotype__accent-logo">Web</span>Studio</a
           >
           <ul class="nav-list">
             <li class="nav-list__item"><a href="./index.html">Студия</a></li>
@@ -32,7 +32,7 @@
         <ul class="contacts">
           <li class="contacts__item">
             <a href="mailto:info@devstudio.com">
-              <svg class="header-icon">
+              <svg class="contacts__icon" width="16px" height="12px">
                 <use href="./img/icons.svg#icon-email"></use>
               </svg>
               info@devstudio.com</a
@@ -40,7 +40,7 @@
           </li>
           <li class="contacts__item">
             <a href="tel:+380961111111">
-              <svg class="header-icon">
+              <svg class="contacts__icon" width="10px" height="16px">
                 <use href="./img/icons.svg#icon-phone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -78,13 +78,13 @@
           <ul class="project-list">
             <li class="project-item">
               <a href=""
-                ><div class="product-thumb">
+                ><div class="product-our-features__thumb">
                   <img
                     src="./img/portfolio/notebook.jpg"
                     alt="notebook"
                     width="370"
                   />
-                  <div class="thumb-text">
+                  <div class="our-features__thumb-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -98,13 +98,13 @@
             </li>
             <li class="project-item">
               <a href=""
-                ><div class="product-thumb">
+                ><div class="product-our-features__thumb">
                   <img
                     src="./img/portfolio/basketballplayers.jpg"
                     alt="basketball-players"
                     width="370"
                   />
-                  <div class="thumb-text">
+                  <div class="our-features__thumb-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -120,13 +120,13 @@
             </li>
             <li class="project-item">
               <a href="">
-                <div class="product-thumb">
+                <div class="product-our-features__thumb">
                   <img
                     src="./img/portfolio/seafood.jpg "
                     alt="label seafood"
                     width="370"
                   />
-                  <div class="thumb-text">
+                  <div class="our-features__thumb-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -140,13 +140,13 @@
             </li>
             <li class="project-item">
               <a href="">
-                <div class="product-thumb">
+                <div class="product-our-features__thumb">
                   <img
                     src="./img/portfolio/earphones.jpg"
                     alt="earphones"
                     width="370"
                   />
-                  <div class="thumb-text">
+                  <div class="our-features__thumb-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -160,13 +160,13 @@
             </li>
             <li class="project-item">
               <a href="">
-                <div class="product-thumb">
+                <div class="product-our-features__thumb">
                   <img
                     src="./img/portfolio/gift-boxes.jpg"
                     alt="gift boxes"
                     width="370"
                   />
-                  <div class="thumb-text">
+                  <div class="our-features__thumb-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -180,9 +180,9 @@
             </li>
             <li class="project-item">
               <a href="">
-                <div class="product-thumb">
+                <div class="product-our-features__thumb">
                   <img src="./img/portfolio/pc.jpg" alt="pc" width="370" />
-                  <div class="thumb-text">
+                  <div class="our-features__thumb-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -196,13 +196,13 @@
             </li>
             <li class="project-item">
               <a href="">
-                <div class="product-thumb">
+                <div class="product-our-features__thumb">
                   <img
                     src="./img/portfolio/magazine.jpg"
                     alt="magazine"
                     width="370"
                   />
-                  <div class="thumb-text">
+                  <div class="our-features__thumb-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -216,13 +216,13 @@
             </li>
             <li class="project-item">
               <a href="">
-                <div class="product-thumb">
+                <div class="product-our-features__thumb">
                   <img
                     src="./img/portfolio/label-tag.jpg"
                     alt="label tag"
                     width="370"
                   />
-                  <div class="thumb-text">
+                  <div class="our-features__thumb-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -236,13 +236,13 @@
             </li>
             <li class="project-item">
               <a href="">
-                <div class="product-thumb">
+                <div class="product-our-features__thumb">
                   <img
                     src="./img/portfolio/notebook-typing.jpg"
                     alt="notebook typing"
                     width="370"
                   />
-                  <div class="thumb-text">
+                  <div class="our-features__thumb-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -260,45 +260,45 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <div class="footer-content">
+        <div class="footer__content">
           <a class="logotype" href="./index.html"
-            ><span class="accent-logo">Web</span>Studio</a
+            ><span class="logotype__accent-logo">Web</span>Studio</a
           >
-          <address class="footer-address">
+          <address class="footer__address">
             <p>г. Киев, пр-т Леси Украинки, 26</p>
-            <a class="footer-contact" href="mailto:info@example.com"
+            <a class="footer__contact" href="mailto:info@example.com"
               >info@example.com</a
             >
-            <a class="footer-contact" href="tel:+380961111111"
+            <a class="footer__contact" href="tel:+380961111111"
               >+38 096 111 11 11</a
             >
           </address>
         </div>
-        <div class="footer-social">
-          <h2 class="social-title">ПРИСОЕДИНЯЙТЕСЬ</h2>
-          <ul class="socials">
-            <li class="icon-item">
+        <div class="footer__social">
+          <h2 class="footer__social-title">ПРИСОЕДИНЯЙТЕСЬ</h2>
+          <ul class="footer__socials-list">
+            <li class="footer__socials-item">
               <a href=""
                 ><svg width="20px" height="20px">
                   <use href="./img/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon-item">
+            <li class="footer__socials-item">
               <a href=""
                 ><svg width="20px" height="16px">
                   <use href="./img/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon-item">
+            <li class="footer__socials-item">
               <a href=""
                 ><svg width="10px" height="20px">
                   <use href="./img/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon-item">
+            <li class="footer__socials-item">
               <a href=""
                 ><svg width="20px" height="20px">
                   <use href="./img/icons.svg#icon-linkedin"></use>
