--- a/portfolio.html
+++ b/portfolio.html
@@ -51,206 +51,206 @@
     </header>
     <main>
       <!-- Our Portfolio Section-->
-      <section class="our-portfolio">
+      <section class="portfolio__wrap">
         <div class="container">
           <h1 class="visually-hidden">наше портфолио</h1>
-          <ul class="portfolio-list">
-            <li class="portfolio-item">
-              <button class="button-current">Все</button>
+          <ul class="portfolio">
+            <li class="portfolio__item">
+              <button class="portfolio__button portfolio__button--current">Все</button>
             </li>
-            <li class="portfolio-item">
-              <button class="button">Веб-сайты</button>
+            <li class="portfolio__item">
+              <button class="portfolio__button">Веб-сайты</button>
             </li>
-            <li class="portfolio-item">
-              <button class="button">Приложения</button>
+            <li class="portfolio__item">
+              <button class="portfolio__button">Приложения</button>
             </li>
-            <li class="portfolio-item">
-              <button class="button">Дизайн</button>
+            <li class="portfolio__item">
+              <button class="portfolio__button">Дизайн</button>
             </li>
-            <li class="portfolio-item">
-              <button class="button">Маркетинг</button>
+            <li class="portfolio__item">
+              <button class="portfolio__button">Маркетинг</button>
             </li>
           </ul>
         </div>
       </section>
-      <section class="our-project">
+      <section class="project__wrap">
         <div class="container">
-          <ul class="project-list">
-            <li class="project-item">
+          <ul class="project__list">
+            <li class="project__item">
               <a href=""
-                ><div class="product-our-features__thumb">
+                ><div class="project__thumb">
                   <img
                     src="./img/portfolio/notebook.jpg"
                     alt="notebook"
                     width="370"
                   />
-                  <div class="our-features__thumb-text">
+                  <div class="project__thumb-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </div>
                 </div>
-                <div class="project-description">
-                  <h2 class="name-of-project">Технокряк</h2>
-                  <p class="type-of-work">Веб-сайт</p>
+                <div class="project__description">
+                  <h2 class="project__name">Технокряк</h2>
+                  <p class="project__work-type">Веб-сайт</p>
                 </div></a
               >
             </li>
-            <li class="project-item">
+            <li class="project__item">
               <a href=""
-                ><div class="product-our-features__thumb">
+                ><div class="project__thumb">
                   <img
                     src="./img/portfolio/basketballplayers.jpg"
                     alt="basketball-players"
                     width="370"
                   />
-                  <div class="our-features__thumb-text">
+                  <div class="project__thumb-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </div>
                 </div>
-                <div class="project-description">
-                  <h2 class="name-of-project">
+                <div class="project__description">
+                  <h2 class="project__name">
                     Постер New Orlean vs Golden Star
                   </h2>
-                  <p class="type-of-work">Дизайн</p>
+                  <p class="project__work-type">Дизайн</p>
                 </div></a
               >
             </li>
-            <li class="project-item">
+            <li class="project__item">
               <a href="">
-                <div class="product-our-features__thumb">
+                <div class="project__thumb">
                   <img
                     src="./img/portfolio/seafood.jpg "
                     alt="label seafood"
                     width="370"
                   />
-                  <div class="our-features__thumb-text">
+                  <div class="project__thumb-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </div>
                 </div>
-                <div class="project-description">
-                  <h2 class="name-of-project">Ресторан Seafood</h2>
-                  <p class="type-of-work">Приложение</p>
+                <div class="project__description">
+                  <h2 class="project__name">Ресторан Seafood</h2>
+                  <p class="project__work-type">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="project-item">
+            <li class="project__item">
               <a href="">
-                <div class="product-our-features__thumb">
+                <div class="project__thumb">
                   <img
                     src="./img/portfolio/earphones.jpg"
                     alt="earphones"
                     width="370"
                   />
-                  <div class="our-features__thumb-text">
+                  <div class="project__thumb-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </div>
                 </div>
-                <div class="project-description">
-                  <h2 class="name-of-project">Проект Prime</h2>
-                  <p class="type-of-work">Маркетинг</p>
+                <div class="project__description">
+                  <h2 class="project__name">Проект Prime</h2>
+                  <p class="project__work-type">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="project-item">
+            <li class="project__item">
               <a href="">
-                <div class="product-our-features__thumb">
+                <div class="project__thumb">
                   <img
                     src="./img/portfolio/gift-boxes.jpg"
                     alt="gift boxes"
                     width="370"
                   />
-                  <div class="our-features__thumb-text">
+                  <div class="project__thumb-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </div>
                 </div>
-                <div class="project-description">
-                  <h2 class="name-of-project">Проект Boxes</h2>
-                  <p class="type-of-work">Приложение</p>
+                <div class="project__description">
+                  <h2 class="project__name">Проект Boxes</h2>
+                  <p class="project__work-type">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="project-item">
+            <li class="project__item">
               <a href="">
-                <div class="product-our-features__thumb">
+                <div class="project__thumb">
                   <img src="./img/portfolio/pc.jpg" alt="pc" width="370" />
-                  <div class="our-features__thumb-text">
+                  <div class="project__thumb-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </div>
                 </div>
-                <div class="project-description">
-                  <h2 class="name-of-project">Inspiration has no Borders</h2>
-                  <p class="type-of-work">Веб-сайт</p>
+                <div class="project__description">
+                  <h2 class="project__name">Inspiration has no Borders</h2>
+                  <p class="project__work-type">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="project-item">
+            <li class="project__item">
               <a href="">
-                <div class="product-our-features__thumb">
+                <div class="project__thumb">
                   <img
                     src="./img/portfolio/magazine.jpg"
                     alt="magazine"
                     width="370"
                   />
-                  <div class="our-features__thumb-text">
+                  <div class="project__thumb-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </div>
                 </div>
-                <div class="project-description">
-                  <h2 class="name-of-project">Издание Limited Edition</h2>
-                  <p class="type-of-work">Дизайн</p>
+                <div class="project__description">
+                  <h2 class="project__name">Издание Limited Edition</h2>
+                  <p class="project__work-type">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="project-item">
+            <li class="project__item">
               <a href="">
-                <div class="product-our-features__thumb">
+                <div class="project__thumb">
                   <img
                     src="./img/portfolio/label-tag.jpg"
                     alt="label tag"
                     width="370"
                   />
-                  <div class="our-features__thumb-text">
+                  <div class="project__thumb-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </div>
                 </div>
-                <div class="project-description">
-                  <h2 class="name-of-project">Проект LAB</h2>
-                  <p class="type-of-work">Маркетинг</p>
+                <div class="project__description">
+                  <h2 class="project__name">Проект LAB</h2>
+                  <p class="project__work-type">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="project-item">
+            <li class="project__item">
               <a href="">
-                <div class="product-our-features__thumb">
+                <div class="project__thumb">
                   <img
                     src="./img/portfolio/notebook-typing.jpg"
                     alt="notebook typing"
                     width="370"
                   />
-                  <div class="our-features__thumb-text">
+                  <div class="project__thumb-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </div>
                 </div>
-                <div class="project-description">
-                  <h2 class="name-of-project">Growing Business</h2>
-                  <p class="type-of-work">Приложение</p>
+                <div class="project__description">
+                  <h2 class="project__name">Growing Business</h2>
+                  <p class="project__work-type">Приложение</p>
                 </div>
               </a>
             </li>
